# djangoProject1

./: .gitignore  pyproject.toml  shop.json
blog/: admin.py  models.py  urls.py  views.py
blog/blog/templates/blog/: blog_detail.html  blog_list.html
blog/migrations/: 0001_initial.py  0002_alter_blog_options_and_more.py
blog/templates/blog/: blog_confirm_delete.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/commands/: ficks.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0002_version.py
catalog/templates/: base.html  product_detail.html  product_list.html
catalog/templates/catalog/: base.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
djangoProject1/: settings.py  urls.py
